--- a/site/style/header.css
+++ b/site/style/header.css
@@ -40,6 +40,8 @@
 	#bandeauLogo {
 		text-align:center;
 		padding-bottom: 15px;
+		margin-top: 20px;
+		margin-bottom: 20px;
 	}
 
 	#logo {
@@ -53,6 +55,7 @@
 	  line-height: 1;
 	  text-shadow: #EDEDED 3px 2px 0;
 	  position: relative;
+
 	}
 	
 
